css tweaks to formatting

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="hero-section center" id="section-1">
       <h1 class="hero-heading">Web Developer</h1>
       <img src="img/jon-headshot2.png" alt="Jon Hocker" class="person-img"/>
-      <h3 class="person-name">Jon Hocker</h3>
+      <h5 class="person-name">Jon Hocker</h5>
       <a href="#section-3" class="hero-button">Projects</a>
     </section>
     <!-- End of Hero Section -->
@@ -43,7 +43,7 @@
 
     <!-- About Me Section -->
     <section class="about-section center" id="section-2">
-      <h1 class="section-heading">About Me</h1>
+      <h2 class="section-heading">About Me</h2>
       <div class="about-wrapper">
         <div class="about-description">
           <p>Before I transitioned to a life of coding, my &lt;<em>non-tech</em>&gt; career path was built out of service to others through roles in customer service and HR. 
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="dev-icons-wrapper">
+      <div class="dev-icons-wrapper center">
         <ul class="icon-list">
           <li class="icon-list-item"><i class="fab fa-html5"></i></li>
           <li class="icon-list-item"><i class="fab fa-css3-alt"></i></li>
@@ -83,12 +83,12 @@
   
     <!-- Projects Section -->
     <section class="projects-section center" id="section-3">
-      <h1 class="section-heading">My Projects</h1>
+      <h2 class="section-heading">My Projects</h2>
       <div class="projects-wrapper center">
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Retreat Website</h2>
-            <h4 class="project-tech">HTML / CSS</h4>
+            <h3 class="project-name">Retreat Website</h3>
+            <h5 class="project-tech">HTML / CSS</h5>
           </div>
           <img src="img/unplugged.png" alt="Unplugged Retreat" class="project-img"/>
           <a href="https://jhock9.github.io/unplugged-retreat/" target="_blank" class="project-button">Check it out</a>
@@ -96,8 +96,8 @@
 
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Small Biz Website</h2>
-            <h4 class="project-tech">HTML / CSS / Photoshop</h4>
+            <h3 class="project-name">Small Biz Website</h3>
+            <h5 class="project-tech">HTML / CSS / Photoshop</h5>
           </div>
           <img src="img/rogue-pickings.png" alt="Rogue Pickings Website" class="project-img"/>
           <a href="https://jhock9.github.io/rogue-pickings/" target="_blank" class="project-button">Check it out</a>
@@ -105,8 +105,8 @@
 
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Freelancer Website</h2>
-            <h4 class="project-tech">HTML / CSS / Photoshop</h4>
+            <h3 class="project-name">Freelancer Website</h3>
+            <h5 class="project-tech">HTML / CSS / Photoshop</h5>
           </div>
           <img src="img/jubilee-austen.png" alt="Jubilee Austen Website" class="project-img"/>
           <a href="https://jhock9.github.io/jubilee-austen/" target="_blank" class="project-button">Check it out</a>
@@ -114,8 +114,8 @@
 
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Guessing Game</h2>
-            <h4 class="project-tech">HTML / CSS / JS</h4>
+            <h3 class="project-name">Guessing Game</h3>
+            <h5 class="project-tech">HTML / CSS / JS</h5>
           </div>
           <img src="img/guess-the-word.png" alt="Guess the Word" class="project-img"/>
           <a href="https://jhock9.github.io/guess-the-word/" target="_blank" class="project-button">Check it out</a>
@@ -123,8 +123,8 @@
 
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Magic 8-Ball</h2>
-            <h4 class="project-tech">HTML / CS / JS / jQuery</h4>
+            <h3 class="project-name">Magic 8-Ball</h3>
+            <h5 class="project-tech">HTML / CS / JS / jQuery</h5>
           </div>
           <img src="img/magic-8-ball.png" alt="Magic 8-Ball" class="project-img"/>
           <a href="https://jhock9.github.io/magic-8-ball/" target="_blank" class="project-button">Check it out</a>
@@ -132,8 +132,8 @@
 
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">Gallery Webpage</h2>
-            <h4 class="project-tech">HTML / CSS / JS / APIs</h4>
+            <h3 class="project-name">Gallery Webpage</h3>
+            <h5 class="project-tech">HTML / CSS / JS / APIs</h5>
           </div>
           <img src="img/github-repo-gallery.png" alt="GitHub Repo Gallery" class="project-img"/>
           <a href="https://jhock9.github.io/github-repo-gallery/" target="_blank" class="project-button">Check it out</a>
@@ -143,8 +143,8 @@
     <!-- End of Projects Section -->
 
     <!-- Contact Section -->
-    <section class="contact-section" id="section-4">
-      <h1 class="section-heading">Contact Me</h1>
+    <section class="contact-section center" id="section-4">
+      <h2 class="section-heading">Contact Me</h2>
       <form class="contact-form center">
         <input type="text" placeholder="Name">
         <input type="email" placeholder="Email">
