--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
 </head>
 
-    <!--TODO -- THINGS TO UPDATE
+    <!-- TODO -- THINGS TO UPDATE
         - new section-1 background 
         - new favicon jh logo
     -->
@@ -48,20 +48,20 @@
         <div class="about-description">
           <p>Before I transitioned to a life of coding, my &lt;<em>non-tech</em>&gt; career path was built out of service to others through roles in customer service and HR. 
             Now as a developer, I get to marry those people-oriented skills to create clean, functional websites that are beautiful to look at and easy to navigate.</p> 
-          <p>I'm constantly expanding my expertise in how I design and build websites. I'm currently adding ReactJS and Bootstrap to my growing library of skills that includes:
-            HTML5, CSS3, JavaScript, JQuery, Rest APIs, Mobile and Responsive Web Design, GIT/GitHub, VS Code, Adobe Photoshop, and CodeSandbox.</p>
+          <p>I'm constantly expanding my expertise in how I design and build websites. Currently I'm learning ReactJS and Bootstrap to add to my growing library of skills:
+            HTML5, CSS3, JavaScript, JQuery, Rest APIs, GIT/GitHub, Mobile and Responsive Web Design, Visual Studio Code, Adobe Photoshop, and CodeSandbox.</p>
         </div>
 
         <div class="about-description">
           <p>I’m an Enneagram 1, so I can be a bit of a perfectionist &#128513;; but only because I’ve always looked for ways to improve what’s been in front of me - processes, communication, culture, and now, websites.</p>
           <p>Outside of the coding life I enjoy playing the guitar and making music, building/tinkering with things, or a fun and possibly over-competitive board game with the family. 
             Speaking of, I have the pleasure of chasing around seven awesome and rambunctious kiddos with my lovely and all too patient wife Amber.</p>
-          <p><span>Let’s build something great together!</span></p>
+          <p class="about-tag">Let’s build something great together!</p>
         </div>
       </div>
 
       <div class="dev-icons-wrapper center">
-        <ul class="icon-list">
+        <ul class="icon-list center">
           <li class="icon-list-item"><i class="fab fa-html5"></i></li>
           <li class="icon-list-item"><i class="fab fa-css3-alt"></i></li>
           <li class="icon-list-item"><i class="fab fa-js-square"></i></li>
