fixed mobile hero heading, some responsive tweaks

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- TODO -- THINGS TO UPDATE
         - new section-1 background 
+        - update branding colors
         - new favicon jh logo
     -->
 
@@ -25,7 +26,9 @@
   <div class="container">
     <!-- Hero Section -->
     <section class="hero-section center" id="section-1">
-      <h1 class="hero-heading">Web Developer</h1>
+      <h1 class="hero-heading" id="not-mobile">Web Developer</h1>
+      <h1 class="hero-heading" id="mobile-top">Web</h1>
+      <h1 class="hero-heading" id="mobile-bottom">Developer</h1>
       <img src="img/jon-headshot2.png" alt="Jon Hocker" class="person-img"/>
       <h5 class="person-name">Jon Hocker</h5>
       <a href="#section-3" class="hero-button">Projects</a>
