--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
     <section class="contact-section center" id="section-4">
       <h2 class="section-heading">Contact Me</h2>
       <form class="contact-form center" method="post" action="contact-form.php">
-        <input type="text" name="name" id="name" placeholder="Name" required>
-        <input type="email" name="email" id="email" placeholder="Email" required>
-        <input type="tel" name="telephone" id="number" placeholder="Phone Number" required>
-        <textarea name="message" id="message" placeholder="What do you want to create?" required></textarea>
+        <input type="text" name="Name" id="Name" placeholder="Name" required>
+        <input type="email" name="Email" id="Email" placeholder="Email" required>
+        <input type="tel" name="Telephone" id="Number" placeholder="Phone Number" required>
+        <textarea name="Message" id="Message" placeholder="What do you want to create?" required></textarea>
         <input type="submit" value="Submit" class="contact-button">
       </form>
     </section>
