added jh-logo and favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jon Hocker | Web Developer</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -166,7 +167,8 @@
         <a href="https://github.com/jhock9" target="_blank" class="social-icon"><i class="fab fa-github-square"></i></a>
       </div>
 
-      <p class="copyright">Copyright: © 2021 Jon Hocker. All Rights Reserved.</p>
+      <p class="copyright center">Copyright: © 2021 Jon Hocker. All Rights Reserved.</p>
+        <img src="img/jh-logo-white.png" alt="JH Logo" class="logo"></img>
     </footer>
     <!-- End of Footer -->
   </div>
