--- a/thankyou.html
+++ b/thankyou.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jon Hocker | Web Developer</title>
-  
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -19,7 +20,6 @@
     <!-- TODO -- THINGS TO UPDATE
         - new section-1 background 
         - update branding colors
-        - new favicon jh logo
     -->
 
 <body>
@@ -30,7 +30,7 @@
       <div class="thanks-wrapper center">
         <p class="thanks-text">You've done your part, now it's my turn. I'll be in touch within 24 hours to chat more about your project, timeline, budget, goals and everything else to make sure we're both on the same page. Until then, enjoy life!</p>
         <div class="gif-wrapper center">
-          <img src="loof-timmy.gif" alt="Loof and Timmy Dancing" class="dance-gif" ></img>
+          <img src="img/loof-timmy.gif" alt="Loof and Timmy Dancing" class="dance-gif" ></img>
         </div>
       </div>
       <a href="index.html" class="thanks-button">Back to the site</a>
@@ -44,7 +44,8 @@
         <a href="https://github.com/jhock9" target="_blank" class="social-icon"><i class="fab fa-github-square"></i></a>
       </div>
 
-      <p class="copyright">Copyright: © 2021 Jon Hocker. All Rights Reserved.</p>
+      <p class="copyright center">Copyright: © 2021 Jon Hocker. All Rights Reserved.</p>
+        <img src="img/jh-logo-white.png" alt="JH Logo" class="logo"></img>
     </footer>
     <!-- End of Footer -->
   </div>
